2011-08-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1877/cpukit
	* libfs/src/imfs/imfs_mknod.c, libfs/src/imfs/memfile.c,
	sapi/inline/rtems/rbtree.inl, score/include/rtems/score/rbtree.h,
	score/inline/rtems/score/rbtree.inl, score/src/rbtree.c,
	score/src/rbtreefind.c, score/src/rbtreeinsert.c: Add comparison
	function for RBTrees.

2011-08-02	Jennifer Averett <Jennifer.Averett@OARcorp.com>

	* score/include/rtems/score/coremutex.h: Move check dispatch for seize
	into its own macro and add smp support.

2011-08-02	Jennifer.Averett <Jennifer.Averett@OARcorp.com>

	PR 1872
	* score/src/apimutexlock.c, score/src/apimutexunlock.c: Added smp
	support to apimutex.

2011-08-02	Petr Benes <benesp16@fel.cvut.cz>

	PR 1861/cpukit
	* score/src/rbtreeextract.c: Remove redundant code.

2011-08-01	Jennifer Averett <Jennifer.Averett@OARcorp.com>

	* score/include/rtems/score/isr.h: Cleaned up comments.

2011-08-01	Jennifer Averett <Jennifer.Averett@OARcorp.com>

	* score/include/rtems/score/smplock.h: Fix comments.

2011-08-01	Jennifer Averett <Jennifer.Averett@OARcorp.com>

	* score/src/schedulersimplesmpschedule.c: Fix bug in smp simple
	scheduler.

2011-08-01	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libfs/src/nfsclient/src/nfs.c: Fixed creation of directories.

2011-07-31	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1855/cpukit
	* posix/src/psignal.c, posix/src/pthread.c, posix/src/pthreadjoin.c:
	Correct signal processing during pthread_join. We are supposed to
	unblock the thread waiting on a pthread_join(), dispatch the signal
	handler, account for it potentially overwriting errno, and then have
	the thread return to blocking within pthread_join().

2011-07-31	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1867/cpukit
	* posix/src/pthreadexit.c, posix/src/pthreadjoin.c: Correct
	implementation of pthread_exit() and pthread_join() to support the
	case where a thread is joinable but calls pthread_exit() before a
	thread has attempted to join.
